# oop_lab3

lab1/: CMakeLists.txt
lab1/include/: solve.hpp
lab1/src/: main.cpp  solution1.cpp
lab2/: CMakeLists.txt
lab2/include/: headers.hpp
lab2/src/: main.cpp  solution2.cpp
lab2/test/: tests2.cpp
lab3/: .gitignore
